Csrf Token eingebaut

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/beaverbase
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.security.user.name=thorsten
+spring.security.user.password=tiger
