--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -60,6 +60,11 @@
 			<version>8.0.28</version> <!-- Ändere die Versionsnummer entsprechend deiner MySQL-Server-Version -->
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.shell</groupId>
 			<artifactId>spring-shell-standard</artifactId>
 			<scope>2.1.0</scope>
